// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> with a valid size and maxWidth matches its snapshot 1`] = `
<span
  className=
      y-text
      y-textSize-xLarge
      y-text__ellipsis
      {
        display: inline-block;
        font-size: 2.2rem;
        line-height: 2.8rem;
        max-width: 200px;
        overflow: hidden;
        text-overflow: ellipsis;
        vertical-align: -0.4rem;
        white-space: nowrap;
      }
  style={
    Object {
      "height": "2.8rem",
      "verticalAlign": "-0.5rem",
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
</span>
`;

exports[`<Text /> with a valid size matches its snapshot 1`] = `
<span
  className=
      y-text
      y-textSize-xLarge
      {
        display: inline-block;
        font-size: 2.2rem;
        line-height: 2.8rem;
      }
  style={
    Object {
      "height": undefined,
      "verticalAlign": undefined,
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
</span>
`;

exports[`<Text /> with additional className matches its snapshot 1`] = `
<span
  className=
      y-text
      TEST_CLASSNAME
      {
        display: inline-block;
      }
  style={
    Object {
      "height": undefined,
      "verticalAlign": undefined,
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
</span>
`;

exports[`<Text /> with bold matches its snapshot 1`] = `
<span
  className=
      y-text
      {
        display: inline-block;
        font-weight: 600;
      }
  style={
    Object {
      "height": undefined,
      "verticalAlign": undefined,
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
</span>
`;

exports[`<Text /> with color secondary matches its snapshot 1`] = `
<span
  className=
      y-text
      {
        color: #495361;
        display: inline-block;
      }
  style={
    Object {
      "height": undefined,
      "verticalAlign": undefined,
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
</span>
`;

exports[`<Text /> with default options matches its snapshot 1`] = `
<span
  className=
      y-text
      {
        display: inline-block;
      }
  style={
    Object {
      "height": undefined,
      "verticalAlign": undefined,
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
</span>
`;

exports[`<Text /> with maxWidth 500px matches its snapshot 1`] = `
<span
  className=
      y-text
      y-text__ellipsis
      {
        display: inline-block;
        max-width: 500px;
        overflow: hidden;
        text-overflow: ellipsis;
        vertical-align: -0.4rem;
        white-space: nowrap;
      }
  style={
    Object {
      "height": undefined,
      "verticalAlign": undefined,
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
</span>
`;

exports[`<Text /> with screenreader text empty string matches its snapshot 1`] = `
<span
  className=
      y-text
      {
        display: inline-block;
      }
  style={
    Object {
      "height": undefined,
      "verticalAlign": undefined,
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
  <ScreenreaderText />
</span>
`;

exports[`<Text /> with screenreader text matches its snapshot 1`] = `
<span
  className=
      y-text
      {
        display: inline-block;
      }
  style={
    Object {
      "height": undefined,
      "verticalAlign": undefined,
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
  <ScreenreaderText>
    SCREENREADER TEXT
  </ScreenreaderText>
</span>
`;

exports[`<Text /> with uppercase matches its snapshot 1`] = `
<span
  className=
      y-text
      {
        display: inline-block;
        text-transform: uppercase;
      }
  style={
    Object {
      "height": undefined,
      "verticalAlign": undefined,
    }
  }
>
  <span
    aria-hidden={true}
  >
    test content
  </span>
</span>
`;
